# wazuh-qa

./: .gitignore  CHANGELOG.md  R1.html  R2.html  R3.html  README.md  SECURITY.md  cambios.patch  conftest.py  f  init  mkdocs.yml  requirements.txt  test  version.json
performance/manager_mock_servers/: pyproject.toml
performance/manager_mock_servers/WazuhManagerMockers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
performance/manager_mock_servers/manager_mock_servers/: README.md
performance/manager_mock_servers/manager_mock_servers/manager_mock/: README.md  simulate_manager.py
performance/manager_mock_servers/manager_mock_servers/manager_services/agent_comm_mock/: README.md  agent_comm_mock.py  models.py
performance/manager_mock_servers/manager_mock_servers/manager_services/manager_server_mock/: README.md  manager_server_mock.py  models.py
performance/manager_mock_servers/manager_mock_servers/utils/: agent_database_handler.py  credentials.py  csv.py  token_manager.py  vars.py
performance/manager_mock_servers/tests/: test_agent_comm.py  test_manager_server_mock.py
performance/manager_mock_servers/tests/test_integration/: test_agent_comm.py  test_manager_server_mock.py  test_manager_simulator.py
performance/manager_mock_servers/tests/test_unit/: test_agent_database_handler.py  test_credentials.py  test_csv.py  test_token_manager.py
performance/wazuh_manager_mockers/: README.md  __init__.py  pyproject.toml
performance/wazuh_manager_mockers/src/: __init__.py
performance/wazuh_manager_mockers/src/manager_mock/: README.md  __init__.py  simulate_manager.py
performance/wazuh_manager_mockers/src/manager_mock_services/agent_comm_mock/: __init__.py  agent_comm_mock.py
performance/wazuh_manager_mockers/src/manager_mock_services/manager_server_mock/: __init__.py  manager_server_mock.py  models.py
performance/wazuh_manager_mockers/src/manager_services/: __init__.py
performance/wazuh_manager_mockers/src/manager_services/agent_comm_mock/: README.md
performance/wazuh_manager_mockers/src/manager_services/manager_server_mock/: README.md  __init__.py
performance/wazuh_manager_mockers/src/utils/: __init__.py  agent_database_handler.py
performance/wazuh_manager_mockers/src/wazuh_manager_mockers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
performance/wazuh_manager_mockers/tests/test_integration/: test_agent_comm.py  test_manager_server_mock.py  test_manager_simulator.py
performance/wazuh_manager_mockers/tests/test_unit/: test_agent_database_handler.py  test_credentials.py  test_csv.py  test_token_manager.py
tests/performance/event_generator/: README.md  config.yaml  main.py  pyproject.toml
tests/performance/event_generator/src/event_generator/: README.md  __init__.py  event_generator.py  main.py
tests/performance/event_generator/templates/: syslog_template.json
tests/performance/event_generator/tests/: __init__.py  test_logeventgenerator.py  test_syscheckeventgenerator.py
tests/performance/test_data_analysis/: README.md  conftest.py  pyproject.toml  report.html  statistical_data_analyzer.py
tests/performance/test_data_analysis/data_analyzer_module/: test_data_analyzer_module.py
tests/performance/test_data_analysis/test_data_analyzer_module/: report.html  test_data_analyzer_module.py
tests/performance/test_data_analysis/unit_tests/: test_data_loader.py  test_statistical_comparator.py  test_statistical_test.py
(+4747 files in other folders)
