[project]
name = "WazuhManagerMockers"
version = "0.0.1"
authors = [
  { name="Wazuh", email="hello@wazuh.com" },
]
description = "Wazuh Library for mocking manager services"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv2",
    "Operating System :: OS Independent",
]


[project.scripts]
run-mock-managers-services = "manager_mock_servers.manager_mock.simulate_manager:main"
