[project]
name = "statistical_data_analyzer"
version = "0.0.1"
authors = [
  { name="Wazuh", email="hello@wazuh.com" },
]
description = "Test to analyze statistical data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "prettytable>=3.11.0",
    "pytest>=8.3.2",
    "pytest-html>=3.1.1",
    "pyyaml>=6.0.2"
]
